--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+asyncpg==0.18.3
 Click==7.0
 fastapi==0.38.1
 h11==0.8.1
 httptools==0.0.13
 pydantic==0.32.2
+python-dotenv==0.10.3
 starlette==0.12.8
 uvicorn==0.9.0
 uvloop==0.13.0
