--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-asyncpg==0.18.3
-Click==7.0
-fastapi==0.38.1
-h11==0.8.1
-httptools==0.0.13
-pydantic==0.32.2
-python-dotenv==0.10.3
-starlette==0.12.8
-uvicorn==0.9.0
-uvloop==0.13.0
-websockets==8.0.2
+greenlet==0.4.15
+msgpack==0.6.1
+neovim==0.3.1
+pynvim==0.3.2
+sexpdata==0.0.3
+six==1.12.0
+websocket-client==0.56.0
