--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,23 @@
-greenlet==0.4.15
-msgpack==0.6.1
-neovim==0.3.1
-pynvim==0.3.2
-sexpdata==0.0.3
+asyncpg==0.18.3
+atomicwrites==1.3.0
+attrs==19.1.0
+Click==7.0
+fastapi==0.38.1
+h11==0.8.1
+httptools==0.0.13
+importlib-metadata==0.23
+more-itertools==7.2.0
+packaging==19.2
+pluggy==0.13.0
+py==1.8.0
+pydantic==0.32.2
+pyparsing==2.4.2
+pytest==5.1.3
+python-dotenv==0.10.3
 six==1.12.0
-websocket-client==0.56.0
+starlette==0.12.8
+uvicorn==0.9.0
+uvloop==0.13.0
+wcwidth==0.1.7
+websockets==8.0.2
+zipp==0.6.0
